--- a/css/styles.css
+++ b/css/styles.css
@@ -43,3 +43,11 @@ header h2 {
   position: absolute;
   right: 0;
   bottom: 0; }
+
+#reserveButton .modal-header {
+  background: #17A2BA;
+  color: white; }
+
+#loginModal .modal-header {
+  background: #901CAD;
+  color: white; }
