--- a/css/styles.scss
+++ b/css/styles.scss
@@ -6,6 +6,7 @@ $color-dark: #60106b;
 $color-black-transparent: rgba(0, 0, 0, 0.5);
 $body-font: "Open Sans", sans-serif;
 $header-font: "Lobster", cursive;
+$color-teal: #17A2BA;
 body {
   font-family: $body-font;
 }
@@ -64,4 +65,18 @@ h2 {
   position: absolute;
   right: 0;
   bottom: 0;
+}
+
+#reserveButton {
+  .modal-header {
+    background: $color-teal;
+    color: white;
+  }
+}
+
+#loginModal {
+  .modal-header {
+    background: $color-mid;
+    color: white;
+  }
 }
